used overflow:hidden and padding to fix H1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ h1  {
     background-color: #4aaaa5;
     color: #ffffff;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 20px;
 }
 
 html    {
@@ -37,6 +38,8 @@ body  {
     position: absolute;
     left: 25%;
     right: 25%;
+    max-height: 75px;
+    overflow: hidden;
 }
 
 header {
